# NEXUS

./: .env.example  .gitignore  README.md  implementation_plan.md  pyproject.toml
dashboard/: package-lock.json  package.json  tailwind.config.ts
dashboard/app/: client-layout.tsx  globals.css  layout.tsx  page.tsx
dashboard/app/agents/: page.tsx
dashboard/app/events/: page.tsx
dashboard/app/memory/: page.tsx
dashboard/app/tasks/: page.tsx
dashboard/app/tools/: page.tsx
dashboard/components/layout/: Header.tsx  Sidebar.tsx
dashboard/components/ui/: Button.tsx  CodeBlock.tsx  EmptyState.tsx  GlassCard.tsx  Input.tsx  MetricCard.tsx  Modal.tsx  StatusBadge.tsx
dashboard/lib/: api.ts  types.ts  useFetch.ts  useWebSocket.ts  utils.ts
docs/superpowers/plans/: 2026-04-02-phase2-3-ipc-memory-self-evolution.md
docs/superpowers/specs/: 2026-03-31-nexus-design.md
nexus/: __init__.py  config.py  main.py
nexus/agents/: __init__.py  analyst.py  base.py  coder.py  factory.py  messaging.py  orchestrator.py  researcher.py
nexus/api/: __init__.py  server.py  websocket.py
nexus/api/routes/: agents.py  memory.py  tasks.py  (+1 more)
nexus/cli/: __init__.py  app.py
nexus/events/: __init__.py  approval.py  bus.py  types.py
nexus/kernel/: __init__.py  kernel.py  registry.py  resource.py  scheduler.py
nexus/mcp_layer/: __init__.py  creator.py  registry.py  sandbox.py
nexus/memory/: __init__.py  long_term.py  shared.py  short_term.py
tests/: test_boot.py  test_long_term_memory.py  test_messaging.py  test_sandbox.py  test_self_evolution_e2e.py  test_tool_creator.py
(+4 files in other folders)
